# lightfly_vm

./: .gitignore  CMakeLists.txt  README.md  SPEC.md  SYNTAX.md  hlt.lf
examples/: big_hlt.lf  complex.lf  early_hlt_big.lf  incorrect_header.lf  incorrect_version.lf  print.lf  sum.lf  sum_jmp.lf  sum_loop.lf
lightfly_vm_avr_runner/: CMakeLists.txt
lightfly_vm_avr_runner/src/: opcodes.c
lightfly_vm_compiler/: CMakeLists.txt
lightfly_vm_lib/: CMakeLists.txt
lightfly_vm_lib/include/: lf_executor.h  lf_loader.h  lf_opcodes.h  lf_stack.h  lib.h
lightfly_vm_lib/src/: lf_executor.c  lf_loader.c  lf_opcodes.c  lf_stack.c
lightfly_vm_runner/: CMakeLists.txt
lightfly_vm_runner/include/: opcodes.h
lightfly_vm_runner/src/: main.c
